# roid_Native_Engine

./: CMakeLists.txt
.github/workflows/: build_observer.yml
include/: config.h  hook_manager.h  ring_buffer.h
scripts/: vendor_bytehook.sh
src/: dispatcher.cpp  hooks_crypto.cpp  hooks_network.cpp  main.cpp  ring_buffer.cpp
